# lam

./: .gitignore  .travis.yml  Readme.md  SECURITY.md  codespell.sh  composer.json  copyright  index.html  params.json  phpstan.neon  phpunit.xml  rector.php  sonar-project.properties
.github/: FUNDING.yml  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml  php.yml  quality.yml  scorecard.yml
CVSROOT/: loginfo
lam/: .htaccess  COPYING  HISTORY  INSTALL  README  TODO  VERSION  codespell.sh  composer.json  copyright  index.html  index.php  lam.conf  phpdoc.sh  pwa_worker.js  sbom-composer.json  sbom-libs.json  sbom.json  sbom.vex.json  session-vars.txt
lam-0.4/: HISTORY  INSTALL  README  TODO  copyright  session-vars.txt
lam-0.4/config/: config.cfg_sample  language
lam-0.4/debian/: README.Debian  changelog  copyright  lam.apache.conf  packages  watch
lam-0.4/docs/: LGPL-license.txt  README.fpdf  README.fpdf.htm  README.lamdaemon.txt  README.openldap  README.openldap.txt  README.security  README.security.txt  README.shells
lam-0.4/help/: help.inc
lam-0.4/lib/: .htaccess  account.inc  blowfish.inc  config.inc  functions.js  lamdaemon.pl  ldap.inc  pdf.inc  status.inc
lam-0.4/po/: make_po_de  make_po_jp  messages.header
lam-0.4/style/: layout.css
lam-0.4/templates/: delete.php  domain.php  help.php  initsuff.php  login.php  logout.php  main.php  main_header.php  masscreate.php  massdetail.php
lam-0.4/tests/: conf-main-test.php
lam-packaging/: buildPackages  getVersion
lam-packaging/RPM/: lam.apache.conf  lam.nginx.conf  ldap-account-manager.spec
lam-packaging/autoconf/: Makefile.in  configure.ac
lam-packaging/debian/: README-lamdaemon.Debian  README.Debian  changelog  config  control  copyright  lam.apache.conf  lam.nginx.conf  ldap-account-manager-lamdaemon.docs  ldap-account-manager.dirs  ldap-account-manager.docs  minify  postinst  postrm  preinst  rules  source.lintian-overrides  templates  watch
lam-packaging/docker/: .env  Dockerfile  docker-compose.yml  start.sh
lam-web/: google_adsense_script.html  index.htm  new-developers.htm
lam-web/apt-get/: index.htm
lam-web/changelog/: index.htm
lam-web/cvs-access/: index.htm
lam-web/debian-packages/: ldap-account-manager_0.4.9-3.dsc  ldap-account-manager_0.4.9-3_all.deb  ldap-account-manager_0.4.9-3_i386.changes  ldap-account-manager_1.0.3-1.dsc  ldap-account-manager_1.0.3-1_all.deb  ldap-account-manager_1.0.3-1_i386.changes  ldap-account-manager_1.0.4-1.dsc  ldap-account-manager_1.0.4-1_all.deb  ldap-account-manager_1.0.4-1_i386.changes  ldap-account-manager_1.1.0-1.dsc  ldap-account-manager_1.1.0-1_all.deb  ldap-account-manager_1.1.0-1_i386.changes  ldap-account-manager_1.1.0.RC1-1.dsc  ldap-account-manager_1.1.0.RC1-1_all.deb  ldap-account-manager_1.1.0.RC1-1_i386.changes  ldap-account-manager_1.1.1-1.dsc  ldap-account-manager_1.1.1-1_all.deb  ldap-account-manager_1.1.1-1_i386.changes  ldap-account-manager_1.1.1-2.dsc  ldap-account-manager_1.1.1-2_all.deb  ldap-account-manager_1.1.1-2_i386.changes  ldap-account-manager_1.2.0-1.dsc  ldap-account-manager_1.2.0-1_all.deb  ldap-account-manager_1.2.0-1_i386.changes  ldap-account-manager_1.3.0-1.dsc  ldap-account-manager_1.3.0-1_all.deb  ldap-account-manager_1.3.0-1_i386.changes  ldap-account-manager_1.3.0-2.dsc  ldap-account-manager_1.3.0-2_all.deb  ldap-account-manager_1.3.0-2_i386.changes  ldap-account-manager_2.0.0-1.dsc  ldap-account-manager_2.0.0-1_all.deb  ldap-account-manager_2.0.0-1_i386.changes  ldap-account-manager_2.1.0-1.dsc  ldap-account-manager_2.1.0-1_all.deb  ldap-account-manager_2.1.0-1_i386.changes  ldap-account-manager_2.2.0-1.dsc  ldap-account-manager_2.2.0-1_all.deb  ldap-account-manager_2.2.0-1_i386.changes  ldap-account-manager_2.2.0-2.dsc  (+3 more)
lam-web/developers/: docs.htm
lam-web/documentation/: faq.htm  howto.htm  index.htm  install.htm  readme.htm  supportedSchemas.htm
lam-web/download/: debian.htm  freebsd.htm  index.htm  oldReleases.htm  rpm.htm
lam-web/freebsd/: index.htm
lam-web/i18n/: i18nhowto.htm  index.htm
lam-web/lamPro/: index.htm  payment.htm  rgs.htm
lam-web/live-demo/: index.htm
lam-web/mailinglists/: index.htm
lam-web/news/: archives.htm  index.htm  php4.htm
lam-web/screenshots/: index.htm
lam-web/sponsors/: bounties.htm  donations.htm  index.htm
lam-web/style/: layout.css
lam-web/tmp/: scalixGroupClass.inc  scalixUserClass.inc
lam-web/todo/: bugs.htm  index.htm
lam/config/: .gitignore  addressbook.conf.sample  addressbook.sample.conf  conf.php.dist  config.cfg.sample  config.cfg_sample  config.php  conflogin.php  confmain.php  confsave.php  lam.conf  lam.conf_sample  language  language.conf  passwordMailTemplate.txt  pdf-structure.xml  print.html  print.php  samba3.conf.sample  samba3.sample.conf  shells  unix.conf.sample  unix.sample.conf  windows_samba4.conf.sample  windows_samba4.sample.conf
lam/docs/: .gitignore  LDAPv3-HOWTO.html  README.Kolab.txt  README.hosts  README.lamdaemon.pl  README.lamdaemon.txt  README.lamdaemonOld.txt  README.openldap.txt  README.schema.txt  README.security.txt  README.upgrade.txt  ldap-linux.htm  modules-specification.htm
lam/graphics/: .gitignore
lam/help/: .htaccess  extFileExample.php  help.inc  help.txt  help_numbers.assign
lam/lib/: .gitignore  .htaccess  2factor.inc  account.inc  adminFooter.inc  adminHeader.inc  baseModule.inc  baseType.inc  blowfish.inc  cache.inc  checkEnvironment.inc  config.inc  configPages.inc  createntlm.inc  createntlm.php  createntlm.pl  cron.sh  cronGlobal.inc  cronGlobal.sh  cronRunner.inc  example.php  export.inc  fpdf-lam.inc  fpdf.php  functions.js  html.inc  imageutils.inc  import.inc  include.inc  lamPDF.inc  lamdaemon.inc  lamdaemon.pl  lamdaemonOld.pl  lamtcpdf.inc  ldap.inc  ldap.php  listgroups.php  listhosts.php  lists.inc  listusers.php  (+23 more)
lam/po/: .gitignore  Makefile  README  extract.pl  make_all  make_mo  make_po  make_po_ca  make_po_cs  make_po_de  make_po_en_US  make_po_es  make_po_fr  make_po_hu  make_po_it  make_po_jp  make_po_nl  make_po_pl  (+11 more)
(+4644 files in other folders)
